--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <center><b>
-            <font size="15" color="red">プロスピA攻略（ヤクルト純正限定）</font>　
+            <font size="15" color="red">プロスピA攻略（ヤクルト純正）</font>　
     </center></b>
 
     <table border=1>
